Adiciona informações de autoria e README

--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,6 @@ jekyll-archives:
     month: '/arquivos/:year/:month/'
     category: '/categorias/:name/'
     tag: '/tags/:name/'
+
+# Informações do Autor
+author: Gean Ramos
